# stm32-from-scratch

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: freertos.cmake  stm32f100rb.cmake  toolchain-arm-none-eabi.cmake
config/: nucleo-f446re.resc  stm32vldiscovery.cfg  stm32vldiscovery.ld
hal/: CMakeLists.txt
hal/Inc/: stm32f1xx_hal_conf.h
src/: CMakeLists.txt  main.c  startup.c
